# LogQuest

./: .dockerignore  .eslintrc.json  .gitignore  LICENSE  README.md  builder.archlinux.dockerfile  builder.debian.dockerfile  builder.dockerfile  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
src/: MainStore.ts  OverlayStore.ts  base.css  crossDispatchMiddleware.ts  ipc.ts  main.tsx  overlay.tsx  rpc.ts  store.ts  tauriEventListeners.ts  tauriEvents.ts  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_character_detection.rs  audio.rs  cli.rs  commands.rs  config.rs  debug_only.rs  gina.rs  log_reader.rs  main.rs  matchers.rs  reactor.rs  state.rs  triggers.rs  tts.rs  ui.rs  utils.rs
src-tauri/src/common/: clipboard.rs  duration.rs  mod.rs  progress_reporter.rs  security.rs  serializable_regex.rs  shutdown.rs  timestamp.rs
src-tauri/src/gina/: conversion.rs  importer.rs  mod.rs  regex.rs  xml.rs
src-tauri/src/logs/: active_character_detection.rs  log_event_broadcaster.rs  log_file_cursor.rs  log_line_stream.rs  log_reader.rs  mod.rs
src-tauri/src/state/: config.rs  mod.rs  overlay.rs  state_handle.rs  state_tree.rs  timer_manager.rs  timers.rs
src-tauri/src/triggers/: command_template.rs  effects.rs  mod.rs  template_string.rs  timers.rs  trigger_index.rs
src-tauri/src/triggers/effects/: clipboard.rs  mod.rs  nothing.rs  overlay_message.rs  parallel.rs  pause.rs  play_audio.rs  sequence.rs  speak.rs  start_timer.rs  sys_cmd.rs
src-tauri/src/triggers/effects/timer_effects/: clear.rs  hide.rs  mod.rs  restart.rs  wait_until_filter_matches.rs  wait_until_finished.rs  wait_until_seconds_remain.rs
src/dialogs/: errorMessage.ts  importGINAFile.ts  selectAudioFile.ts  selectEQDir.ts  selectExecutable.ts
src/features/: common.ts
src/features/app/: appSlice.ts  loadingWhile.ts
src/features/config/: configSlice.ts
src/features/overlay/: overlaySlice.ts
src/features/timers/: timersSlice.ts
src/features/triggers/: deltas.ts  editorSlice.ts  triggerEditorSlice.ts  triggerGroupEditorSlice.ts  triggersSlice.ts
src/main/: Layout.tsx  MainWindow.css  MainWindow.scss  MainWindow.tsx  OverlayMode.tsx  OverviewMode.css  OverviewMode.tsx  ReceiveBuffs.tsx  SelectEQFolderFooter.tsx  TriggerBrowser.css  TriggerBrowser.tsx  TriggerEditor.css  TriggerEditor.tsx  TriggerTagChanger.tsx  TriggerTree.css  TriggerTree.tsx
src/main/editor/: CommitContext.ts  EditCompositeEffects.tsx  EditCopyToClipboardEffect.tsx  EditDoNothingEffect.tsx  EditEffect.tsx  EditOverlayMessageEffect.tsx  EditPauseEffect.tsx  EditPlayAudioFileEffect.tsx  EditRunSystemCommandEffect.tsx  EditScopedTimerEffect.tsx  EditSequenceEffect.tsx  EditSpeakEffect.tsx  EditSpeakStopEffect.tsx  EditStartTimerEffect.tsx  EffectWithOptions.tsx  EffectWithoutOptions.tsx  TriggerEditor.css  TriggerEditor.tsx  TriggerTagsEditor.css  TriggerTagsEditor.tsx  effect-utils.ts
src/main/editor/widgets/: AutocompleteEffect.tsx  ControlledTextField.tsx  EditDuration.tsx  EditFilter.css  EditFilter.tsx  EditorError.tsx  EffectHeader.tsx  EffectList.tsx  IncludeTimerEffectsContext.ts  InsertEffectDivider.tsx
src/main/trigger-tree/: TriggerGroupListItem.tsx  TriggerIDsInSelectedTriggerTagContext.ts  TriggerListItem.tsx  TriggerTagChanger.css  TriggerTagChanger.tsx  TriggerTree.css  TriggerTree.tsx
src/main/trigger-tree/dialogs/: TriggerGroupDeleteConfirmationDialog.tsx  TriggerGroupEditorDialog.tsx
src/main/trigger-tree/menus/: TriggerContextMenu.tsx  TriggerGroupContextMenu.tsx
src/overlay/: Countdown.css  Countdown.tsx  DynamicContainer.css  DynamicContainer.tsx  OverlayMessage.css  OverlayMessage.tsx  OverlayWindow.css  OverlayWindow.scss  OverlayWindow.tsx
src/style/: base.scss  controls.scss  headers.scss  main.scss
src/widgets/: EmojiText.tsx  LoadingIndicator.css  LoadingIndicator.tsx  StandardTooltip.tsx
