[package]
name = "LogQuest"
version = "0.1.0"
description = "A Deluxe Toolbox for EverQuest enjoyers"
authors = ["Tinkering Guild"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "process-exit",
  "shell-open",
  "global-shortcut",
  "dialog-all",
] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["cargo"] }
serde_json = "1"
xml-rs = "0.8.20"
anyhow = "1.0.86"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
dirs = "5.0.1"
toml = "0.8.14"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
ts-rs = { version = "9.0", features = ["chrono-impl"] }
rand = "0.8"
glob = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
lazy_static = "1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# tracing-log = "0.2"

# For Tokio support, the docs suggest disabling default features and enabling macos_kqueue: https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio
notify = { version = "6", default-features = false, features = [
  "macos_kqueue",
] }

regex = { version = "1" }
# onig = "6"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
