# Reference: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "LogQuest"
version = "0.1.0"
description = "A Deluxe Toolbox for EverQuest enjoyers"
authors = ["Tinkering Guild"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
awedio = "0.4.0"
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
clap = { version = "4.5.11", features = ["derive", "cargo"] }
cpal = "0.15"
dirs = "5.0.1"
futures = "0.3"
glob = "0.3"
lazy_static = "1.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [
  "process-exit",
  "shell-open",
  "global-shortcut",
  "dialog-all",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "9.0", features = ["chrono-impl"] }
xml-rs = "0.8.20"
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }

# For Tokio support, the docs suggest disabling default features and enabling macos_kqueue: https://docs.rs/notify/latest/notify/#crossbeam-channel--tokio
notify = { version = "6", default-features = false, features = [
  "macos_kqueue",
] }
tts = "0.26.3"
csv = "1.3.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
fancy-regex = "0.13.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
